# recommend-arena

./: .gitignore  README.md
arena_core/: Cargo.toml  pyproject.toml
arena_core/src/: fts5.rs  hardneg.rs  lib.rs  prefilter.rs  rrf.rs
artifacts/: .gitkeep
benchmark/: README.md  metrics.py  report.py  runner.py
benchmark/data/: running_shoes.json  ski_products.json  ski_reviews.json  test_queries.json
benchmark/results/: summary.json  summary.txt
data/wine/: README.md  products.jsonl  reviews.jsonl
designs/: design-01-graph-based.md  design-02-pure-embedding.md  design-03-llm-judge.md  design-04-hybrid-structured.md  design-05-sql-first.md  design-06-multi-agent.md  design-07-bayesian.md  design-08-tfidf-weights.md  design-09-faceted-search.md  design-10-ensemble-ltr.md  design-11-finetuned-embedding.md  design-12-distilled-llm.md  design-13-opus-listwise.md  design-13-researched-distilled-hybrid.md  design-14-local-first-hybrid.md
frontend/: app.py
implementations/design_00_sota/: __init__.py  index.py  ingestion.py  prompts.py  query_parser.py  recommender.py  scorer.py  synonyms.py  tfidf.py
implementations/design_01_graph/: __init__.py  (+5 more)
scripts/: arena_new.py  build_heatmap.py  build_ski_eval_v2.py  build_wine_dataset.py  build_wine_eval.py  discover_filter_phrases.py  eval_bundle.py  eval_matrix.py  extract_schema.py  finetune_embedding.py  finetune_listwise.py  finetune_reranker.py  generate_synthetic_queries.py
shared/: __init__.py  domain_bundle.py  inference_tiers.py  interface.py  llm_provider.py  researched_llm_provider.py  seeding.py
(+499 files in other folders)
