[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "arena_core"
version = "0.1.0"
description = "Hot-path Rust core for the recommend-arena framework"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "arena_core"
